// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PrismaFieldParser snapshots should snapshot a parsed schema with enums and relations 1`] = `
{
  "enums": {
    "Status": [
      "ACTIVE",
      "INACTIVE",
    ],
  },
  "models": [
    {
      "enums": [],
      "fields": [
        {
          "baseType": "String",
          "customValidations": [],
          "hasDefaultValue": true,
          "isArray": false,
          "isId": true,
          "isOptional": false,
          "isUnique": false,
          "name": "id",
          "type": "String",
        },
        {
          "baseType": "String",
          "customValidations": [],
          "hasDefaultValue": false,
          "isArray": false,
          "isId": false,
          "isOptional": true,
          "isUnique": false,
          "name": "name",
          "type": "String",
        },
        {
          "baseType": "String",
          "customValidations": [
            {
              "decorator": "max",
              "operations": [
                "create",
                "update",
              ],
              "value": "50",
            },
          ],
          "hasDefaultValue": true,
          "isArray": false,
          "isId": false,
          "isOptional": true,
          "isUnique": true,
          "name": "email",
          "type": "String",
        },
        {
          "baseType": "Status",
          "customValidations": [],
          "hasDefaultValue": false,
          "isArray": true,
          "isId": false,
          "isOptional": false,
          "isUnique": false,
          "name": "tags",
          "type": "Status[]",
        },
        {
          "baseType": "String",
          "customValidations": [],
          "hasDefaultValue": false,
          "isArray": false,
          "isId": false,
          "isOptional": false,
          "isUnique": false,
          "name": "userId",
          "type": "String",
        },
        {
          "baseType": "User",
          "customValidations": [],
          "hasDefaultValue": false,
          "isArray": false,
          "isId": false,
          "isOptional": false,
          "isUnique": false,
          "name": "user",
          "relationFromFields": [
            "userId",
          ],
          "relationName": undefined,
          "relationToFields": [
            "id",
          ],
          "type": "User",
        },
      ],
      "moduleType": "features",
      "name": "Post",
      "tgLabelField": undefined,
    },
  ],
}
`;

exports[`PrismaFieldParser snapshots should snapshot representative parseField outputs 1`] = `
[
  {
    "baseType": "String",
    "customValidations": [],
    "hasDefaultValue": true,
    "isArray": false,
    "isId": true,
    "isOptional": false,
    "isUnique": false,
    "name": "id",
    "type": "String",
  },
  {
    "baseType": "String",
    "customValidations": [],
    "hasDefaultValue": true,
    "isArray": false,
    "isId": false,
    "isOptional": true,
    "isUnique": true,
    "name": "email",
    "type": "String",
  },
  {
    "baseType": "User",
    "customValidations": [],
    "hasDefaultValue": false,
    "isArray": false,
    "isId": false,
    "isOptional": false,
    "isUnique": false,
    "name": "user",
    "relationFromFields": undefined,
    "relationName": "PostToUser",
    "relationToFields": undefined,
    "type": "User",
  },
  {
    "baseType": "User",
    "customValidations": [],
    "hasDefaultValue": false,
    "isArray": false,
    "isId": false,
    "isOptional": false,
    "isUnique": false,
    "name": "user",
    "relationFromFields": [
      "userId",
      "tenantId",
    ],
    "relationName": undefined,
    "relationToFields": [
      "id",
      "tenantId",
    ],
    "type": "User",
  },
  {
    "baseType": "String",
    "customValidations": [
      {
        "decorator": "max",
        "operations": [
          "create",
          "update",
        ],
        "value": "50",
      },
    ],
    "hasDefaultValue": false,
    "isArray": false,
    "isId": false,
    "isOptional": false,
    "isUnique": false,
    "name": "name",
    "type": "String",
  },
  {
    "baseType": "String",
    "customValidations": [
      {
        "decorator": "required",
        "operations": [
          "create",
        ],
        "value": undefined,
      },
    ],
    "hasDefaultValue": false,
    "isArray": false,
    "isId": false,
    "isOptional": false,
    "isUnique": false,
    "name": "email",
    "type": "String",
  },
  {
    "baseType": "Status",
    "customValidations": [],
    "hasDefaultValue": false,
    "isArray": true,
    "isId": false,
    "isOptional": false,
    "isUnique": false,
    "name": "tags",
    "type": "Status[]",
  },
  {
    "baseType": "DateTime",
    "customValidations": [],
    "hasDefaultValue": true,
    "isArray": false,
    "isId": false,
    "isOptional": false,
    "isUnique": false,
    "name": "createdAt",
    "type": "DateTime",
  },
]
`;
